# open-randomness

./: .gitignore  .gitmodules  CMakeLists.txt  analyze.sh
analysis/testu01/: Makefile  config.status  libtool  tcode
analysis/testu01/.deps/: tcode.Po
analysis/testu01/doc/: Makefile
analysis/testu01/examples/: Makefile  Makefile.in
analysis/testu01/include/: Makefile  config.h
analysis/testu01/mylib/: Makefile
analysis/testu01/mylib/.deps/: addstr.Plo  bitset.Plo  chrono.Plo  gdef.Plo  mystr.Plo  num.Plo  num2.Plo  tables.Plo  util.Plo
analysis/testu01/mylib/.libs/: libmylib.lai
analysis/testu01/param/: Makefile
analysis/testu01/probdist/: Makefile
analysis/testu01/probdist/.deps/: fbar.Plo  fdist.Plo  finv.Plo  fmass.Plo  gofs.Plo  gofw.Plo  statcoll.Plo  wdist.Plo
analysis/testu01/probdist/.libs/: libprobdist.lai
analysis/testu01/testu01/: Makefile
analysis/testu01/testu01/.deps/: bbattery.Plo  fcho.Plo  fcong.Plo  ffam.Plo  ffsr.Plo  fknuth.Plo  fmarsa.Plo  fmultin.Plo  fnpair.Plo  fres.Plo  fspectral.Plo  fstring.Plo  ftab.Plo  fvaria.Plo  fwalk.Plo  rijndael-alg-fst.Plo  scatter.Plo  scomp.Plo  sentrop.Plo  sknuth.Plo  smarsa.Plo  smultin.Plo  snpair.Plo  sres.Plo  sspacings.Plo  sspectral.Plo  sstring.Plo  svaria.Plo  swalk.Plo  swrite.Plo  tu01_sha1.Plo  uautomata.Plo  ubrent.Plo  ucarry.Plo  ucrypto.Plo  ucubic.Plo  udeng.Plo  ufile.Plo  ugfsr.Plo  ugranger.Plo  (+18 more)
analysis/testu01/testu01/.libs/: libtestu01.lai
metadata/: urandom_ubuntu-24.04_2025-03-09.txt
src/: CMakeLists.txt
src/intel-rdrand/: CMakeLists.txt  rdrand.c  rdrand_sample.sh
src/linux_urandom/: urandom_sample.sh
